# unity_log_catcher_server

./: .gitignore
cli/: Cargo.toml
cli/src/: main.rs
server/: Cargo.toml
server/src/: actions.rs  dto.rs  error.rs  main.rs  state.rs  tcp.rs
warehouse/: Cargo.toml
warehouse/src/: error.rs  lib.rs  log.rs
