[package]
name = "server"
version = "0.1.0"
authors = ["zwetsloot robert jan <jan.zwetsloot@adglobe.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"
